# PixelSight

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/base/: asgi.py  settings.py  urls.py
backend/core/: consumers.py  models.py  routing.py  utils.py  views.py
backend/core/migrations/: 0001_initial.py  0002_arasset_delete_custommask.py
examples/: main.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AssetManager.tsx  InterfaceOverlay.tsx  MagicalCanvas.tsx
frontend/store/: DetectionStore.ts
