[project]
name = "objectdetection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "channels-redis>=4.3.0",
    "channels[daphne]>=4.3.2",
    "django>=6.0.1",
    "mediapipe>=0.10.31",
    "opencv-contrib-python>=4.12.0.88",
    "opencv-python>=4.12.0.88",
    "twisted[http2,tls]>=25.5.0",
]
